[package]
name = "ansi-str"
version = "0.8.0"
edition = "2021"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "A library which provides a set of methods to work with ANSI strings"
repository = "https://github.com/zhiburt/ansi-str"
homepage = "https://github.com/zhiburt/ansi-str"
documentation = "https://docs.rs/ansi-str"
license = "MIT"
keywords = ["cli", "color", "ansi", "terminal", "ansi_term"]
categories = ["text-processing", "command-line-interface"]

[dependencies]
ansitok = "0.2.0"

[dev-dependencies]
owo-colors = "3.4.0"
