[package]
name = "ansi-str"
version = "0.9.0"
edition = "2021"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "A library which provides a set of methods to work with ANSI strings"
repository = "https://github.com/zhiburt/ansi-str"
homepage = "https://github.com/zhiburt/ansi-str"
documentation = "https://docs.rs/ansi-str"
license = "MIT"
keywords = ["cli", "color", "ansi", "terminal", "ansi_term"]
categories = ["text-processing", "command-line-interface"]

[dependencies]
ansitok = { git = "https://gitlab.com/zhiburt/ansitok/", rev = "099ebf7960bd298f0154d793720741f8cd1e898b" }
